[gd_scene load_steps=25 format=3 uid="uid://buyx0seaqhkap"]

[ext_resource type="Script" uid="uid://doltiwxgvkdvg" path="res://scripts/enemy_4.gd" id="1_0cinm"]
[ext_resource type="PackedScene" uid="uid://b8sel28s0s3ep" path="res://scenes/bullet_4.tscn" id="2_lkpdo"]
[ext_resource type="Texture2D" uid="uid://b37i22bsosan7" path="res://assets/Monster_Creatures_Fantasy(Version 1.3)/Goblin/Attack3.png" id="3_lkpdo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ur2lb"]
atlas = ExtResource("3_lkpdo")
region = Rect2(0, 0, 138, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_50ooa"]
atlas = ExtResource("3_lkpdo")
region = Rect2(138, 0, 138, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_eob20"]
atlas = ExtResource("3_lkpdo")
region = Rect2(276, 0, 138, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ou0w7"]
atlas = ExtResource("3_lkpdo")
region = Rect2(414, 0, 138, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdq1e"]
atlas = ExtResource("3_lkpdo")
region = Rect2(552, 0, 138, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_qy6ml"]
atlas = ExtResource("3_lkpdo")
region = Rect2(690, 0, 138, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahxrn"]
atlas = ExtResource("3_lkpdo")
region = Rect2(828, 0, 138, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_3spnt"]
atlas = ExtResource("3_lkpdo")
region = Rect2(966, 0, 138, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_x57ml"]
atlas = ExtResource("3_lkpdo")
region = Rect2(1104, 0, 138, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jckb5"]
atlas = ExtResource("3_lkpdo")
region = Rect2(1242, 0, 138, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_08ru6"]
atlas = ExtResource("3_lkpdo")
region = Rect2(1380, 0, 138, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_afgjn"]
atlas = ExtResource("3_lkpdo")
region = Rect2(1518, 0, 138, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_32ol0"]
atlas = ExtResource("3_lkpdo")
region = Rect2(1656, 0, 138, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_a1412"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur2lb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50ooa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eob20")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ou0w7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdq1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qy6ml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahxrn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3spnt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x57ml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jckb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08ru6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afgjn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32ol0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ejytf"]
radius = 33.0

[sub_resource type="CircleShape2D" id="CircleShape2D_n665k"]
radius = 252.01785

[sub_resource type="CircleShape2D" id="CircleShape2D_lowyn"]
radius = 39.051247

[sub_resource type="Gradient" id="Gradient_y4r1p"]
interpolation_color_space = 2
offsets = PackedFloat32Array(0.9607843, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_n665k"]
gradient = SubResource("Gradient_y4r1p")
width = 60
height = 6
use_hdr = true
fill_to = Vector2(200, 18)

[sub_resource type="Gradient" id="Gradient_d2wvv"]
interpolation_color_space = 2
offsets = PackedFloat32Array(0.4509804, 0.99019605, 1)
colors = PackedColorArray(0.5335002, 0, 0.97, 1, 0.96862745, 0, 0, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_lowyn"]
gradient = SubResource("Gradient_d2wvv")
width = 60
height = 6
use_hdr = true
fill_from = Vector2(5, 0)
fill_to = Vector2(200, 18)

[node name="enemy4" type="CharacterBody2D"]
collision_mask = 3
script = ExtResource("1_0cinm")
bullet_scene = ExtResource("2_lkpdo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.7066667, 1.5466666)
sprite_frames = SubResource("SpriteFrames_a1412")
autoplay = "default"
frame_progress = 0.5744483

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(10, 7)
shape = SubResource("CircleShape2D_ejytf")

[node name="firetimer" type="Timer" parent="."]

[node name="detection_range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_range"]
position = Vector2(7, 7)
shape = SubResource("CircleShape2D_n665k")

[node name="receive_damage" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="receive_damage"]
position = Vector2(10, 7)
shape = SubResource("CircleShape2D_lowyn")

[node name="health_timer" type="Timer" parent="."]

[node name="HP" type="TextureProgressBar" parent="."]
visible = false
offset_left = -19.0
offset_top = -24.0
offset_right = 41.0
offset_bottom = -18.0
max_value = 3.0
rounded = true
texture_under = SubResource("GradientTexture2D_n665k")
texture_progress = SubResource("GradientTexture2D_lowyn")

[connection signal="timeout" from="firetimer" to="." method="_on_firetimer_timeout"]
[connection signal="body_entered" from="detection_range" to="." method="_on_detection_range_body_entered"]
[connection signal="body_exited" from="detection_range" to="." method="_on_detection_range_body_exited"]
[connection signal="body_entered" from="receive_damage" to="." method="_on_receive_damage_body_entered"]
[connection signal="body_exited" from="receive_damage" to="." method="_on_receive_damage_body_exited"]
[connection signal="timeout" from="health_timer" to="." method="_on_health_timer_timeout"]
